# rust-binbin

./: Cargo.toml  README.md
src/: deferred.rs  derive.rs  endian.rs  lib.rs  pack.rs  tests.rs
